Fixed contrast issues

--- a/assets/css/EmpowerAbilityLab.css
+++ b/assets/css/EmpowerAbilityLab.css
@@ -43,7 +43,7 @@
     right: 10px;
     font-size: 1.5rem;
     font-weight: bold;
-    color: #aaa;
+    color: #0070f4;
     background: none;
     border: none;
     cursor: pointer;
@@ -125,7 +125,7 @@ a:focus, button:focus, input:focus, select:focus, textarea:focus {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #0070f4;
 }
 
 input:checked + .slider:before {
